提示介面完成

--- a/Assets/WebGLTemplates/NTU_GL/index.html
+++ b/Assets/WebGLTemplates/NTU_GL/index.html
@@ -27,7 +27,7 @@
 #if SHOW_DIAGNOSTICS
         <img id="diagnostics-icon" src="TemplateData/webmemd-icon.png">
 #endif
-        <div id="unity-build-title">台大&師大線上虛擬空間</div>
+        <div id="unity-build-title">滑鼠右鍵開啟/關閉提示介面 | 台大&師大線上虛擬空間</div>
       </div>
     </div>
     <script>
